# internal/pkg/server/delivery/mux/mux.go
@@ -64,6 +64,7 @@ func NewMux(ctx context.Context, configMux *ConfigMux, userStorage userusecases.
 	router.Handle("/api/v1/order/update_count", middleware.Context(ctx, productHandler.UpdateOrderCountHandler))
 	router.Handle("/api/v1/order/update_status", middleware.Context(ctx, productHandler.UpdateOrderStatusHandler))
 	router.Handle("/api/v1/order/buy_full_basket", middleware.Context(ctx, productHandler.BuyFullBasketHandler))
+	router.Handle("/api/v1/order/delete/", middleware.Context(ctx, productHandler.DeleteOrderHandler))
 
 	mux := http.NewServeMux()
 	mux.Handle("/", middleware.Panic(router))
